--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/scrapping/.ipynb_checkpoints
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/mongodb/.ipynb_checkpoints
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/.ipynb_checkpoints
+/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/scrapping/.ipynb_checkpoints/Indeed - MongoDB-checkpoint.ipynb
+/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/mongodb/.ipynb_checkpoints/Indeed - MongoDB-checkpoint.ipynb
+/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/.ipynb_checkpoints/Scrapping - Indeed-checkpoint.ipynb
+/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/application/ContactFrom_v4.zip
+/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/application/Table_Responsive_v1.zip
+/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/stopwords_fr.txt
