--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/scrapping/.ipynb_checkpoints/Indeed - MongoDB-checkpoint.ipynb
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/mongodb/.ipynb_checkpoints/Indeed - MongoDB-checkpoint.ipynb
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/.ipynb_checkpoints/Scrapping - Indeed-checkpoint.ipynb
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/application/ContactFrom_v4.zip
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/application/Table_Responsive_v1.zip
-/Users/ltaing/Documents/SIMPLON DATA IA/IA/ML PROJET/PROJET JOB/stopwords_fr.txt
+scrapping/.ipynb_checkpoints/Indeed - MongoDB-checkpoint.ipynb
+mongodb/.ipynb_checkpoints/Indeed - MongoDB-checkpoint.ipynb
+.ipynb_checkpoints/
